[package]
name = "untitled-space-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
leafwing-input-manager = "0.10"
bevy_asset_loader = "0.17"
bevy_spatial = "0.6"

rand = "*"
strum = "0.24"
strum_macros = "0.24"
itertools = "0.8"
indexmap = "1.9"
interpolation = "0.2"